fixed col on mobile issue

--- a/src/components/Albums/album.css
+++ b/src/components/Albums/album.css
@@ -1,5 +1,16 @@
+body{
+	margin: 0;
+	padding: 0!important;
+}
+.container { 
+	background-image: url("https://s3-us-west-2.amazonaws.com/kendrickdamnproject/background-home.jpg");
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+}
 .row{
-	
+
 }
 .col-md-6, .col-xs-12{
 	padding: 0;
@@ -45,4 +56,26 @@ h3{
 	width: 100%;
 	min-height: 300px;
 	height: 100%;
+}
+@media only screen and (max-width: 768px) {
+	.container {
+		/*padding: 0;*/
+		width:auto;
+	}
+	.album-section {
+		border: 2px solid white;
+		margin-left: auto;
+		margin-right: auto;
+		padding: 20px;
+	}
+	.center-btn{
+		text-align: center;
+	}
+	.center-btn .btn.btn-default{
+		display: block;
+		padding: 10px;
+		margin: 10px auto;
+		max-width: 150px;
+		border: 2px solid white;
+	}
 }
